# clBLAS

./: .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  README.md  appveyor.yml  clBLAS_8h_source.html  cltypes_8h_source.html  dir_0aacf3aed1a5c7085b23ed9486273ee2.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7cd5004dd8039ab421dc7688842bf50b.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_f518930938cfcd84bbf44252662b2c18.html  example_chbmv_8c-example.html  example_chemm_8cpp-example.html  example_cher2k_8c-example.html  example_cher_8c-example.html  example_cherk_8cpp-example.html  example_chpmv_8c-example.html  example_chpr_8c-example.html  example_csscal_8c-example.html  example_isamax_8c-example.html  example_sasum_8c-example.html  example_saxpy_8c-example.html  example_scopy_8c-example.html  example_sdot_8c-example.html  example_sgbmv_8c-example.html  example_sgemm_8c-example.html  example_sgemv_8c-example.html  example_sger_8c-example.html  example_snrm2_8c-example.html  example_srot_8c-example.html  example_srotg_8c-example.html  example_srotm_8c-example.html  example_srotmg_8c-example.html  example_ssbmv_8c-example.html  example_sscal_8c-example.html  example_sspmv_8c-example.html  example_sspr2_8c-example.html  (+81 more)
doc/: README-BinaryCacheOnDisk.txt  README-FunctorConcepts.txt  README-HowToIntroduceFunctors.txt  README-TransformASolverIntoAFunctor.txt  clBLAS.doxy
search/: all_62.js  all_63.js  all_68.js  all_69.js  all_6f.js  all_73.js  enums_63.js  enumvalues_63.js  functions_63.js  groups_61.js  groups_63.js  groups_64.js  groups_67.js  groups_68.html  groups_6e.html  groups_6e.js  groups_6f.js  groups_72.js  groups_74.js  groups_76.js  pages_6f.js  search.js  typedefs_63.html  typedefs_63.js
src/: CMakeLists.txt  FindNetlib.cmake  FindOpenCL.cmake  clAmdBlas.h  clAmdBlas.version.h  clBLAS.def  clBLAS.h  flags_public.txt
src/client/: CMakeLists.txt  clfunc_common.hpp  clfunc_xgemm.hpp  clfunc_xgemv.hpp  clfunc_xger.hpp  clfunc_xgerc.hpp  clfunc_xgeru.hpp  clfunc_xhemm.hpp  clfunc_xhemv.hpp  clfunc_xher.hpp  clfunc_xher2.hpp  clfunc_xher2k.hpp  clfunc_xherk.hpp  clfunc_xsymm.hpp  clfunc_xsymv.hpp  clfunc_xsyr.hpp  clfunc_xsyr2.hpp  clfunc_xsyr2k.hpp  clfunc_xsyrk.hpp  clfunc_xtrmm.hpp  clfunc_xtrmv.hpp  clfunc_xtrsm.hpp  clfunc_xtrsv.hpp  client.cpp
src/include/: binary_lookup.h  defbool.h  devinfo.h  granulation.h  kern_cache.h  kerngen.h  md5sum.h  msvc.h  rwlock.h  trace_malloc.h
src/samples/: CMakeLists.pack  CMakeLists.txt  example_chbmv.c  example_chemm.cpp  example_cher.c  example_cher2k.c  example_cherk.cpp  example_chpmv.c  example_chpr.c  example_csscal.c  example_ctrsm.c  example_dtrmv.c  example_isamax.c  example_sasum.c  example_saxpy.c  example_scopy.c  example_sdot.c  example_sgbmv.c  example_sgemm.c  example_sgemv.c  example_sger.c  example_snrm2.c  example_srot.c  example_srotg.c  example_srotm.c  example_srotmg.c  example_ssbmv.c  example_sscal.c  example_sspmv.c  example_sspr.c  (+20 more)
src/scripts/AutoGemm/TestAutoGemm/: CMakeLists.txt  FindOpenCL.cmake  ProfileAutoGemm.cpp  TestAutoGemm.cpp
(+2460 files in other folders)
